# ripgrep

./: .gitignore  ANALYSIS_SUMMARY.md  BENCHMARK_HUGE.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING_GDEFLATE.md  Cargo.toml  DIRECTSTORAGE_INTEGRATION.md  GDEFLATE_CONFIG.md  GDEFLATE_GPU_SIMD_SUMMARY.md  GPU_CODE_REVIEW.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_RECOMMENDATIONS.md  GPU_REVIEW_EXECUTIVE_SUMMARY.md  GPU_SUPPORT.md  GUIDE.md  GpuSubstringSearch.cudafe1.gpu  GpuSubstringSearch.cudafe1.stub.c  GpuSubstringSearch.module_id  GpuSubstringSearch.sm_52.cubin  INTEGRATION_STATUS.md  NVCOMP_BUILD_GUIDE.md  NVCOMP_INTEGRATION.md  PERFORMANCE_BASELINE.md  QUICKSTART.md  README_GDEFLATE.md  REVIEW_COMPLETE.md  REVIEW_SUMMARY.md  bench_gpu.sh  bench_results.md  benchmark_report.md  build.rs  check_dev  check_dev.rs  large_test_file  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  (+10 more)
benchmarks/: README.md  gpu_benchmark.sh
benchsuite/: gdeflate_benchmark.sh
crates/cli/: Cargo.toml
crates/cli/src/: decompress.rs
crates/core/: gpu.rs  main.rs  search.rs
crates/core/flags/: defs.rs  hiargs.rs  lowargs.rs
crates/gdeflate/: Cargo.toml  HARDWARE_ACCELERATION.md  README.md  build.rs
crates/gdeflate/GDeflate/: CMakeLists.txt  FloatCompat.h  FloatCompatLaunchPatch.h  GDeflateCompress.cpp  GDeflateConfig.cmake.in  GDeflateDecompress.cpp  GDeflate_c.cpp  GDeflate_c.h  GDeflate_gpu.cpp  GDeflate_gpu.h  GDeflate_nvcomp.cpp  GpuSubstringSearch.cu  cuda_runtime.h  features.h  gdeflate.pc.in
crates/gdeflate/GDeflate/bits/: floatn-common.h  floatn.h
crates/gdeflate/GDeflate/crt/: host_runtime.h
crates/gdeflate/examples/: basic.rs  gpu_demo.rs  performance.rs
crates/gdeflate/src/: gpu.rs  lib.rs
crates/grep/: Cargo.toml
crates/printer/src/: standard.rs
docs/: GPU_REGEX_PLAN.md
examples/: gdeflate_integration.rs
gpu_bridge/src/: gpu_search.cu  gpu_search.cuh  lib.cpp
tests/: binary.rs  feature.rs  gdeflate_test.rs  gpu_tests.rs  tests.rs
tmp_keep/: GpuSubstringSearch.cudafe1.c  GpuSubstringSearch.cudafe1.gpu  GpuSubstringSearch.cudafe1.stub.c
tmp_nvcc/: GpuSubstringSearch.cudafe1.c  GpuSubstringSearch.fatbin.c
tmp_nvcc_keep/: GpuSubstringSearch.cudafe1.gpu  GpuSubstringSearch.fatbin  GpuSubstringSearch.ptx
